<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    app:navigationIcon="@drawable/ic_close"/>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:orientation="horizontal"
          android:padding="8dp">

          <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
              android:id="@+id/powerText"
              style="@style/Widget.TextView.MoveStatusLarge"/>

            <com.google.android.material.textview.MaterialTextView
              style="@style/Widget.TextView.MoveStatusLabel"
              android:text="@string/power"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
              android:id="@+id/powerProgress"
              style="@style/Widget.ProgressBar.MoveStatusLarge"/>
          </FrameLayout>

          <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textview.MaterialTextView
              android:id="@+id/accuracyText"
              style="@style/Widget.TextView.MoveStatusLarge"/>

            <com.google.android.material.textview.MaterialTextView
              style="@style/Widget.TextView.MoveStatusLabel"
              android:text="@string/accuracy"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
              android:id="@+id/accuracyProgress"
              style="@style/Widget.ProgressBar.MoveStatusLarge"/>
          </FrameLayout>

          <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
              android:id="@+id/ppText"
              style="@style/Widget.TextView.MoveStatusLarge"/>

            <com.google.android.material.textview.MaterialTextView
              style="@style/Widget.TextView.MoveStatusLabel"
              android:text="@string/pp"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
              android:id="@+id/ppProgress"
              style="@style/Widget.ProgressBar.MoveStatusLarge"/>
          </FrameLayout>
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:orientation="horizontal"
          android:padding="8dp">

          <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
              android:id="@+id/effectText"
              style="@style/Widget.TextView.MoveStatusSmall"/>

            <com.google.android.material.textview.MaterialTextView
              style="@style/Widget.TextView.MoveStatusLabel"
              android:text="@string/effect"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
              android:id="@+id/effectProgress"
              style="@style/Widget.ProgressBar.MoveStatusSmall"/>
          </FrameLayout>

          <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <com.google.android.material.textview.MaterialTextView
              android:id="@+id/priorityText"
              style="@style/Widget.TextView.MoveStatusSmall"/>

            <com.google.android.material.textview.MaterialTextView
              style="@style/Widget.TextView.MoveStatusLabel"
              android:text="@string/priority"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
              android:id="@+id/priorityProgress"
              style="@style/Widget.ProgressBar.MoveStatusSmall"/>
          </FrameLayout>
        </LinearLayout>
      </LinearLayout>

      <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.TextView.Group"
        android:text="@string/description"/>

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/pp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

      <TextView
        style="@style/Widget.TextView.Group"
        android:text="@string/learned_by"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"/>
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>

</LinearLayout>
