<?xml version="1.0" encoding="UTF-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="true"
  tools:context=".ui.monster.MonsterActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:id="@+id/toolbarLayout"
      android:layout_width="match_parent"
      android:layout_height="192dp"
      android:background="?colorPrimary"
      app:collapsedTitleTextColor="?colorOnSurface"
      app:expandedTitleMarginStart="96dp"
      app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge"
      app:expandedTitleTextColor="?colorSurface"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_collapseMode="pin"
        app:navigationIcon="?homeAsUpIndicator"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <androidx.gridlayout.widget.GridLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        app:useDefaultMargins="true">

        <com.google.android.material.textview.MaterialTextView
          style="@style/Widget.TextView.PokemonStatusLabel"
          android:text="@string/stat_hp"
          app:layout_column="0"
          app:layout_row="0"/>

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/hpStatText"
          style="@style/Widget.TextView.PokemonStatus"
          app:layout_column="1"
          app:layout_row="0"/>

        <FrameLayout
          android:layout_width="0dp"
          android:layout_height="18dp"
          app:layout_column="2"
          app:layout_columnWeight="1"
          app:layout_row="0">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/hpStatProgress"
            style="@style/Widget.ProgressBar.PokemonStatus"/>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
          style="@style/Widget.TextView.PokemonStatusLabel"
          android:text="@string/stat_atk"
          app:layout_column="0"
          app:layout_row="1"/>

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/atkStatText"
          style="@style/Widget.TextView.PokemonStatus"
          app:layout_column="1"
          app:layout_row="1"/>

        <FrameLayout
          android:layout_width="0dp"
          android:layout_height="18dp"
          app:layout_column="2"
          app:layout_columnWeight="1"
          app:layout_row="1">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/atkStatProgress"
            style="@style/Widget.ProgressBar.PokemonStatus"/>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
          style="@style/Widget.TextView.PokemonStatusLabel"
          android:text="@string/stat_def"
          app:layout_column="0"
          app:layout_row="2"/>

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/defStatText"
          style="@style/Widget.TextView.PokemonStatus"
          app:layout_column="1"
          app:layout_row="2"/>

        <FrameLayout
          android:layout_width="0dp"
          android:layout_height="18dp"
          app:layout_column="2"
          app:layout_columnWeight="1"
          app:layout_row="2">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/defStatProgress"
            style="@style/Widget.ProgressBar.PokemonStatus"/>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
          style="@style/Widget.TextView.PokemonStatusLabel"
          android:text="@string/stat_spc_atk"
          app:layout_column="0"
          app:layout_row="3"/>

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/spcAtkStatText"
          style="@style/Widget.TextView.PokemonStatus"
          app:layout_column="1"
          app:layout_row="3"/>

        <FrameLayout
          android:layout_width="0dp"
          android:layout_height="18dp"
          app:layout_column="2"
          app:layout_columnWeight="1"
          app:layout_row="3">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/spcAtkStatProgress"
            style="@style/Widget.ProgressBar.PokemonStatus"/>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
          style="@style/Widget.TextView.PokemonStatusLabel"
          android:text="@string/stat_spc_def"
          app:layout_column="0"
          app:layout_row="4"/>

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/spcDefStatText"
          style="@style/Widget.TextView.PokemonStatus"
          app:layout_column="1"
          app:layout_row="4"/>

        <FrameLayout
          android:layout_width="0dp"
          android:layout_height="18dp"
          app:layout_column="2"
          app:layout_columnWeight="1"
          app:layout_row="4">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/spcDefStatProgress"
            style="@style/Widget.ProgressBar.PokemonStatus"/>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
          style="@style/Widget.TextView.PokemonStatusLabel"
          android:text="@string/stat_spd"
          app:layout_column="0"
          app:layout_row="5"/>

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/spdStatText"
          style="@style/Widget.TextView.PokemonStatus"
          app:layout_column="1"
          app:layout_row="5"/>

        <FrameLayout
          android:layout_width="0dp"
          android:layout_height="18dp"
          app:layout_column="2"
          app:layout_columnWeight="1"
          app:layout_row="5">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/spdStatProgress"
            style="@style/Widget.ProgressBar.PokemonStatus"/>
        </FrameLayout>
      </androidx.gridlayout.widget.GridLayout>

      <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.TextView.Group"
        android:text="@string/gallery"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/galleryRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

      <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.TextView.Group"
        android:text="@string/evolution"/>

      <LinearLayout
        android:id="@+id/evolutionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"/>

      <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.TextView.Group"
        android:text="@string/move"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moveRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"/>
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/action"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:contentDescription="@string/btn_roster_add_desc"
    android:src="@drawable/ic_add"
    app:backgroundTint="?colorAccent"
    app:layout_anchor="@id/appbarLayout"
    app:layout_anchorGravity="bottom|start"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
